# 3d_curves_app

./: CMakeLists.txt  README.md  curves.cpp  curves.h  curves.hpp  main.cpp  types.h  types.hpp
include/3d_curves_app/: curves.hpp
src/: curves.cpp  main.cpp
